--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@srexi/purecounterjs": "^1.5.0",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-ejs-layouts": "^2.5.1"
